@@ -2,6 +2,8 @@ git-annex (5.20131131) UNRELEASED; urgency=low
 
   * Avoid using git commit in direct mode, since in some situations
     it will read the full contents of files in the tree.
+  * assistant: Batch jobs are now run with ionice and nocache, when
+    those commands are available.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 01 Dec 2013 13:57:58 -0400
 
